--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "@pistoiahelm/react-hwe-editor",
+  "name": "react-hwe-editor",
   "version": "1.5.4",
   "description": "React based implementation of HELM Web Editor.",
-  "author": "Joshua Ren",
   "license": "MIT",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
-  },
-  "repository": "https://github.com/PistoiaHELM/react-hwe-editor",
+  "repository": "https://github.com/nursoltan-s/react-hwe-editor",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
